--- a/gb/23/3/12/n13948423.md
+++ b/gb/23/3/12/n13948423.md
@@ -6,14 +6,14 @@
 <h6></h6>
 <hr>
 	<p>【大纪元2023年03月12日讯】（大纪元记者文烨美国丹佛报导）“我能从舞台上感受到源源不断的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>，而且能量巨大，非常深刻。”Paul Yarbrough说，观看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>时他感受到一股来自内心深处的感动与喜悦。</p>
-<p>2023年3月11日下午，Yarbrough于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%B9%E4%BD%9B%E5%B8%82%E5%B8%83%E5%B0%94%E5%89%A7%E9%99%A2.md#1">丹佛市布尔剧院</a>（The Buell Theatre at DPAC）观看了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在当地的第四场演出。首次观赏演出的他对神韵推崇备至，“这些舞剧编排得非常精致，充满了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96.md#1">文化</a>内涵，都是上百年、上千年的经典传奇故事。”</p>
+<p>2023年3月11日下午，Yarbrough于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%B9%E4%BD%9B%E5%B8%82%E5%B8%83%E5%B0%94%E5%89%A7%E9%99%A2.md#1">丹佛市布尔剧院</a>（The Buell Theatre at DPAC）观看了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在当地的第四场演出。首次观赏神韵的他对演出推崇备至，“这些舞剧编排得非常精致，充满了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96.md#1">文化</a>内涵，都是上百年、上千年的经典传奇故事。”</p>
 <p>Yarbrough是位资深律师，拥有超过34年的诉讼经验，并在2023年获得美国最佳律师的称号。之前，他是Butt Thornton &amp; Baehr PC公司的总裁兼董事总经理，管理30位辩护律师。</p>
 <p>“精彩绝伦，不光舞蹈、音乐不同凡响，这两者的完美结合更深藏着博大精深的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96.md#1">文化</a>内涵，蕴藏着历史典故。看得出他们（演员）对在舞台上所讲述的故事充满自豪。观赏神韵对我来说是不可思议的体验。”Yarbrough说。</p>
 <p>从天国世界到民族风情，从矫健的英姿到细腻的感情流露，Yarbrough说，这些舞蹈剧情的设计都别具匠心，尤其是“《水袖》真是美丽无比，《雪山欢歌》藏族男儿为神欢歌的舞蹈非常迷人，活力充沛，令人敬佩”。</p>
 <p>“很有意思的是，我发现自己在看演出的过程中，有好几次发自内心深处地高兴，当我全身心专注故事情节时，我微笑着，很快乐。”他说。</p>
 <p>神韵以中国古典舞展现了从古至今的传说、历史典故，并演绎传统价值。Yarbrough盛赞，“故事中充满文化内涵，不是随便编的情节，那些故事都是关于上百年、上千年的文化经典传奇故事，非常引人入胜。”</p>
 <p>演出中包含揭露中共迫害人权的节目，他表示，“这让身在此处的我内心充满感恩。中国人看不到这场演出，现代中国人甚至不知道这个秀，不能欣赏她体现的文化、历史、信仰舞蹈和民族精神，这令人沮丧，也让我加上更清醒地意识到中共迫害的存在。”</p>
-<p>神韵舞蹈演员和音乐家都修炼法轮大法，透过演出分享真、善、忍的价值观，Yarbrough对此深表认同。“这（真、善、忍）真是个美好的信息，这是个值得广传的美好信息。”</p>
+<p>神韵舞蹈演员和音乐家都修炼法轮大法，透过演出分享“真、善、忍”的价值观，Yarbrough对此深表认同。“这（‘真、善、忍’）真是个美好的信息，这是个值得广传的美好信息。”</p>
 <p>责任编辑：周立恒</p>
 	
 <hr>
@@ -30,31 +30,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948202.md#1">【财商天下】Temu狂飙北美 烧钱越多隐患越大？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948235.md#1">【舞蹈三剑客 】神韵演员：想对年轻的自己说?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948144.md#1">【新闻看点】李强如何被习看中 习李配能走多远</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947069.md#1">丑闻缠身 韩正接替王岐山任中共国家副主席</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947020.md#1">习近平三连任 分析：或将遭遇前所未有打击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947000.md#1">中共国务院机构改革方案通过 罕现1票反对</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947566.md#1">关晓彤零遮掩买早餐 与店员逗趣对话笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947269.md#1">TWICE发行迷你12辑 透露成员关系亲密秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946900.md#1">陆男团偶像徐炳超消失半年 街头卖包子上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946850.md#1">退休前想重温拍剧 梁朝伟未必首选TVB</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947592.md#1">消失7个月 26岁男星蒋智豪确诊肺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945826.md#1">补充蛋白质 11种常见食物价格亲民又实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943988.md#1">快速摆脱身体不适 高剂量维生素C有助改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947035.md#1">抗癌有最佳时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946374.md#1">心理学家阐述何谓“二手压力”？有何迹象？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938698.md#1">随时随地都能专心工作的7个诀窍</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963059.md#1">【全球新闻】成员国全部批准 芬兰成北约第31个成员国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960616.md#1">美中航空业之争 美有杀手锏 C919何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962026.md#1">传马云原计划去日本 突然在香港转道回国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961986.md#1">北京庆丰包子铺又被查 习近平曾到访就餐</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961317.md#1">遭大陆主持人强拉外套 王心凌吓得脸色大变</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961287.md#1">43岁沈腾疑出国求医 近照脖子粗大引猜测</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/12/n13948423.htm">美国最佳律师观神韵：喜悦从内心迸发而出</a></p><hr>
