--- a/gb/23/2/17/n13931612.md
+++ b/gb/23/2/17/n13931612.md
@@ -41,36 +41,36 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/15/n13825878.md#1">加拿大学生公寓缺乏 学生租房比普通租客贵</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/2/n13837487.md#1">加国高通胀下 大批留学生求助食品银行</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921507.md#1">UBC新学年住宿费涨幅最高将达8%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/18/n13868415.md#1">数学早期教育可以塑造孩子的未来</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963476.md#1">卡尔加里华裔年轻钢琴家国际大师赛夺冠</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/22/n11814019.md#1" target="_blank">夏林：中共是国民党大选惨败的根本原因</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491970.md#1" target="_blank">奥地利女子缘何修炼法轮功 答案让你意想不到</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923681.md#1">【古道人生】洗衣妇原来是武林高手 巧惩恶吏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945926.md#1">【环球直击】女性8689月薪？大陆职场报告惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946014.md#1">【秦鹏观察】南京教师被停职 粉红向凤姐道歉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945956.md#1">【中国禁闻】习近平罕见点名批美 两国更对立？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944711.md#1">习罕见批李克强？习李暗战三个细节引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944563.md#1">【秦鹏观察】GDP目标加“左右” 李克强泄密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944827.md#1">中共公布国务院机构重组方案 暂未涉公安国安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944500.md#1">老演员李琦京城摆摊卖烤肉 50元一串引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944672.md#1">心疼詹雅雯将3度开脑 大S具俊瞱与小S献花送暖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944433.md#1">孙俪大提琴考级试 自嘲紧张得脸红 网友笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944565.md#1">修杰楷40岁生日 贾静雯晒合照甜蜜告白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945104.md#1">两巨星隔空联动 周星驰喊话周杰伦“香港见”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917282.md#1">这一时间运动对心脏最好 2技巧令效果翻倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928982.md#1">抗癌延寿作用强大 石榴这样吃最有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943990.md#1">自然疗愈！照着步骤做 有望改善身体健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943029.md#1">高度加工食物成瘾罹癌更致命 专家：3个方法戒断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943910.md#1">微不足道的小善利己利人 让自己更幸福</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11966877.md#1">【一线采访视频版】异议人士张展武汉50天见闻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/18/n11802942.md#1">【思想领袖】贾勒特：针对川普的“政治迫害”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/22/n11962469.md#1">轻症感染者最好在家隔离  美医师：出现3状况快就医</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/21/n11961666.md#1">台：轻症者符合5条件 采1次不用住院隔离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/20/n11959811.md#1">这些医护人员守在第一线！抗疫背后你不知的辛劳</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/18/n11949836.md#1">只有一只耳朵！“独角兽”小金毛自信又快乐</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/19/n11953809.md#1">世界最陡房屋650英尺岩石上  客：很累但值得</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/17/n13931612.htm">亚省将高等教育学费涨幅限制在2%</a></p><hr>
